--- a/src/app/shared/tab/tab.component.html
+++ b/src/app/shared/tab/tab.component.html
@@ -1,1 +1,5 @@
-<ng-content></ng-content>
+
+<!-- useful if you want to toggle a single class-->
+<div [class.hidden]="!active">
+    <ng-content></ng-content>
+</div>
